LogIn y Registro con Js

--- a/style-login.css
+++ b/style-login.css
@@ -5,7 +5,7 @@
     
     }
     body{
-        background-image: url("./imgs/walle.jpg");
+        background-image: url("imgs/walle.jpg");
     }
     .contenedor{
         width: 300px;
