--- a/style-registro.css
+++ b/style-registro.css
@@ -15,6 +15,7 @@
         border-radius: 10px;
         text-align: center;
         box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+        opacity: 0.5;
     }
     
     h1{
@@ -31,6 +32,7 @@
         margin-bottom: 10px;
         border-radius: 20px;
         background: #c5c3c3;
+        opacity: 50%;
     }
     button{
         font-size: 1rem;
