--- a/style.css
+++ b/style.css
@@ -40,8 +40,10 @@ a:focus{
 }
 
 .icon{
-    background-color: aliceblue;
+    background-color:red;
+    border-radius: 10px;
 }
+
 
 .menu-contenedor{
     width: 100%;
@@ -64,8 +66,52 @@ a:focus{
 .ho{
     font-weight: bold;
 }
+/*
 .contenedor{
     background-color: #151515;
     min-height: calc(100vh - 50px);
     color: white;
   }
+*/
+  .contenedor{
+    display: flex;
+    justify-content:center;
+    flex-wrap:wrap;
+    gap: 16px;
+    }
+    .tarjeta{
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    width: auto;
+    border: 1px solid lightgray;
+    box-shadow: 2px 2px 8px 4px #d3d3d3d1;
+    border-radius:15px;
+    font-family: sans-serif;
+    }
+    .titulo{
+    font-size: 24px;
+    padding: 10px 10px 0 10px;;
+    }
+    .cuerpo{
+    padding: 10px;
+    flex: 1 1 100%;
+    }
+    .pie{
+    background: #6699ff;
+    border-radius:0 0 15px 15px;
+    padding: 10px;
+    text-align:center; }
+    .pie a{
+    text-decoration: none;
+    color: white;
+    }
+    .pie a:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    content: ""
+    }
