--- a/pelicula.css
+++ b/pelicula.css
@@ -131,15 +131,20 @@ a:focus{
     display:flex;
     flex-direction:column;
     justify-content:center;
-    width: 40%;
+    width: 80%;
     padding-left: 2%;
     gap: 16px;
     
 }
 
 .cont2{   
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    width: 40%;
+    padding-right: 20%;
+    gap: 16px;
     
-    margin-bottom: 50px;
 }
 
 h3{
@@ -172,9 +177,15 @@ iframe{
         .menu-item-search{
             justify-self: center;
             
-        }
-
+        }  
+        .art{
+            display: grid;
+            
+            grid-template-columns: 55% 45%;
+            column-gap: 1rem;
+        }     
        
+        
 
        
           
